<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yarn</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_place_android_key">AIzaSyDJugIcIH8Pmr6M3Vj_poooPuxPfl1BBO4</string>
    <string name="google_place_key">AIzaSyDInIjo7RGKGGMB0YhHLMDUMsDmZQviOwE</string>
    <string name="google_geo_coding_key">AIzaSyBn7fiuXUVjM66h4iWp0txhxjxEC0tjUVw</string>
    <string name="google_geo_location_key">AIzaSyAX3LevyOPcYKQEWG8hV9xdnG_jEdncGrw</string>
    <string name="facebook_app_id">212630036311409</string>
    <string name="fb_login_protocol_scheme">fb212630036311409</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY" translatable="false" tools:ignore="UnusedResources">ppv4du1RiVrMYRBz9X9h4Xwok</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET" translatable="false" tools:ignore="UnusedResources">LPMxYOfZpqsdJEtFbbYluMDuN5vc52nhFKtIBiQh1UnU2pLXwa </string>
    <string name="main_signInButton">Sign In</string>
    <string name="main_signUpButton">Sign Up</string>
    <string name="map_refreshButton">Refresh</string>
    <string name="map_chatPlannerButton">Chat Planner</string>
    <string name="map_notificationsButton">Notifications</string>
    <string name="map_accountButton">Account</string>
    <string name="maps_searchButton">Search</string>
    <string name="maps_searchDefaultText">Where to next?</string>
    <string name="maps_whereToGoButton">Where to go?</string>
    <string name="maps_100m">100m</string>
    <string name="maps_10km">10km</string>
    <string name="chatPlanner_title">Chat Planner</string>
    <string name="chatPlanner_eventWindow_title">Chats</string>
    <string name="chatPlanner_monthDefault">Month - Year</string>
    <string name="chatPlanner_cancelChat_button">Cancel Chat</string>
    <string name="chatPlanner_chatWindow_default_text">Place Name\n00/00/00\n00:00AM\n00:00</string>
    <string name="chatPlanner_suggestionTitle">Chat Suggestions</string>
    <string name="chatPlanner_removeSuggestionButton">Remove</string>
    <string name="chatPlanner_suggestionDefaultText">This is a suggestion</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_defaultText">No notifications</string>
    <string name="notification_defaultNotification">This is a notification</string>
    <string name="notification_closeNotificationButton">Close</string>
    <string name="account_nameDefault">John Doe</string>
    <string name="account_editButton">Edit</string>
    <string name="account_cancelButton">Cancel</string>
    <string name="account_updateButton">Update</string>
    <string name="account_logOutButton">Log Out</string>
    <string name="account_supportButton">Support</string>
    <string name="account_resetPasswordButton">Update Password</string>
    <string name="account_resetEmailButton">Update Email</string>
    <string name="account_ageTitle">Age</string>
    <string name="account_ageDefault">18</string>
    <string name="account_genderTitle">Gender</string>
    <string name="account_genderDefault">Male</string>
    <string name="signUp_title">--------------- Sign Up ---------------</string>
    <string name="signUp_title2">------------ Sign Up With ------------</string>
    <string name="signUp_emailHint">Email</string>
    <string name="signUp_passwordHint">Password</string>
    <string name="signUp_confirmPasswordHint">Confirm Password</string>
    <string name="signUp_or">Or</string>
    <string name="signUp_button">Sign Up</string>
    <string name="signUp_facebookButtonContentDescription">Facebook Login Button</string>
    <string name="signUpPhone_title">Sign Up Phone</string>
    <string name="signUpPhone_phoneNumberHint">Phone Number</string>
    <string name="signUpPhone_codeHint">Code</string>
    <string name="signUpPhone_sendCode">Send Code</string>
    <string name="signUpPhone_resendCode">Resend Code</string>
    <string name="signUpPhone_verify">Verify</string>
    <string name="SignUpPhone_closeButton">Close</string>
    <string name="signIn_title">--------------- Sign In ---------------</string>
    <string name="signIn_title2">------------ Sign In With ------------</string>
    <string name="signIn_emailHint">Email</string>
    <string name="signIn_passwordHint">Password</string>
    <string name="signIn_button">Sign In</string>
    <string name="signIn_forgotPasswordButton">Forgot Password?</string>
    <string name="createAccount_title">--------------- Create Account ---------------</string>
    <string name="createAccount_userNameHint">User Name</string>
    <string name="createAccount_birthDateHint">Birth Date</string>
    <string name="createAccount_profilePictureHint">Profile Picture</string>
    <string name="createAccount_genderHint">Gender</string>
    <string name="createAccount_profilePictureDescription">User Profile Picture</string>
    <string name="createAccount_button">Create Account</string>
    <string name="intro_skipButton">Skip</string>
    <string name="terms_acceptButton">Accept</string>
    <string name="chatCreator_title">Create Chat</string>
    <string name="chatCreator_create_button">Create</string>
    <string name="chatCreator_place_discription">Create a chat here? -  </string>
    <string name="chatCreator_date_button">Date</string>
    <string name="chatCreator_time_button">Time</string>
    <string name="chatCreator_duration_button">Duration</string>
    <string name="infoWindow_placeTitle_default">Place Name</string>
    <string name="infoWindow_chatTitle">Chats</string>
    <string name="infoWindow_createChat_button">Create Chat</string>
    <string name="infoWindow_joinChat_button">Join</string>
    <string name="infoWindow_dateTime">00/00/00 00:00AM</string>
    <string name="infoWindow_googleMaps_Button">Google Maps</string>
    <string name="infoWindow_contentDiscription">Place Photo</string>
    <string name="chatActivity_PlaceTitle">Place Name</string>
    <string name="chatActivity_DateTitle">Date</string>
    <string name="chatActivity_DateDefault">00/00/00</string>
    <string name="chatActivity_TimeTitle">Time</string>
    <string name="chatActivity_timeDefault">00:00AM</string>
    <string name="chatActivity_PersonNameTitle">Name</string>
    <string name="chatActivity_PersonNameDefault">John Doe</string>
    <string name="chatActivity_PersonAgeTitle">Age</string>
    <string name="chatActivity_PersonAgeDefault">18</string>
    <string name="chatActivity_PersonGenderTitle">Gender</string>
    <string name="chatActivity_PersonGenderDefault">Male</string>
    <string name="chatActivity_MeetingWith">Meeting With</string>
    <string name="chatActivity_RatingTitle">Rating</string>
    <string name="chatActivity_StartButton">Start</string>
    <string name="chatActivity_PersonImageDescription">Profile picture</string>
    <string name="chatActivity_NoOneToMeet">There is no one to meet yet</string>
    <string name="chatActivity_AddressDefault">Address</string>
    <string name="chatActivity_LengthTitle">Length</string>
    <string name="chatActivity_Length">15mins</string>
    <string name="whereToActivity_title">Where To?</string>
    <string name="whereToActivity_results">Results</string>
    <string name="whereToActivity_placeTypes">Place Types</string>
    <string name="whereToActivity_searchButton">Search</string>
    <string name="whereToActivity_userFocusButton">Focus on User</string>
    <string name="whereToActivity_barCheckBox">Bars</string>
    <string name="whereToActivity_cafeCheckBox">Cafes</string>
    <string name="whereToActivity_restaurantCheckBox">Restaurants</string>
    <string name="whereToActivity_nightClubCheckBox">Night Clubs</string>
    <string name="whereToElement_placeName">Place Name</string>
    <string name="whereToElement_goButton">Go</string>
    <string name="whereToElement_type">Type </string>
    <string name="whereToElement_typeString">Cafe</string>
    <string name="whereToElement_distance">Distance</string>
    <string name="whereToElement_distanceNumber">1000m</string>
    <string name="whereToElement_chats">Chats</string>
    <string name="whereToElement_chatsNumber">0</string>
    <string name="password_update_title">Update Password</string>
    <string name="password_update_passwordInput">Password</string>
    <string name="password_update_newPasswordInput">New Password</string>
    <string name="password_update_confirmNewPasswordInput">Confirm New Password</string>
    <string name="password_update_cancelButton">Cancel</string>
    <string name="password_update_submitButton">Submit</string>
    <string name="password_reset_title">Reset Password</string>
    <string name="password_reset_emailInput">Email</string>
    <string name="password_reset_cancelButton">Cancel</string>
    <string name="password_reset_submitButton">Submit</string>
    <string name="email_update_title">Update Email</string>
    <string name="email_update_passwordInput">Password</string>
    <string name="email_update_newEmailInput">New Email</string>
    <string name="email_update_confirmNewEmailInput">Confirm New Email</string>
    <string name="email_update_cancelButton">Cancel</string>
    <string name="email_update_submitButton">Submit</string>
    <string name="support_title">Support</string>
    <string name="support_message">Message</string>
    <string name="support_cancelButton">Cancel</string>
    <string name="support_submitButton">Submit</string>
    <string name="rateActivity_title">Rate Chat</string>
    <string name="rateActivity_with">--------------- With ---------------</string>
    <string name="rateActivity_user_name">John Doe</string>
    <string name="rateActivity_report_button">Report User</string>
    <string name="rateActivity_submit_button">Submit</string>
    <string name="rateActivity_cancel_button">Cancel</string>
    <string name="reportWindow_title">Report User</string>
    <string name="reportWindow_instruction">Please tell us what happened?</string>
    <string name="reportWindow_submitButton">Submit</string>
    <string name="reportWindow_cancelButton">Button</string>
</resources>