<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="vertical"
    tools:minHeight="450dp">

    <TextView
        android:id="@+id/placeTilte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/infoWindow_placeTitle_default"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/placePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/infoWindow_contentDiscription"
        android:minWidth="400dp"
        android:padding="10dp"
        android:weightSum="1"
        app:srcCompat="@android:color/background_dark" />

    <TextView
        android:id="@+id/chatsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="0"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/infoWindow_chatTitle"
        android:textAlignment="center"
        android:textSize="18sp" />

    <ScrollView
        android:id="@+id/chatScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/elements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="bottom"
        android:orientation="horizontal">


        <Button
            android:id="@+id/googleMapsButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infoWindow_googleMaps_Button"
            android:textSize="11sp" />

        <Button
            android:id="@+id/createChatButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infoWindow_createChat_button"
            android:textSize="11sp" />

    </LinearLayout>

</LinearLayout>